@@ -9,7 +9,7 @@ data_FAKE_DIC
     _dictionary.title            FAKE_DIC
     _dictionary.class            Reference
 #   _dictionary.version          0.0.1
-    _dictionary.date             2017-07-15
+    _dictionary.date             2018-05-30
     _dictionary.uri              http://www.fake.org/fake.dic
     _dictionary.ddl_conformance  3.11.10
     _dictionary.namespace        FakeDic
@@ -24,7 +24,7 @@ _definition.id                  FAKE_DIC
     _dictionary_audit.version
     _dictionary_audit.date
     _dictionary_audit.revision
-    0.0.1 2017-07-15 'Creating the dictionary'
+    0.0.1 2018-05-30 'Creating the dictionary'
 
 save_PARENT
     _definition.id               PARENT
@@ -157,6 +157,42 @@ save_looped_category_no_key_name.key
     _type.container              Single
     _type.contents               Integer
     _category_key.name           '_looped_category_no_key_id.key'
+save_
+
+save_looped_category_no_key_name.aliased_item
+    _dictionary.title            FAKE_DIC
+    _definition.id               '_looped_category_no_key_name.aliased_item'
+    loop_
+      _alias.definition_id
+          '_looped_category_no_key_name.item_with_aliases'
+    _definition.scope            Item
+    _definition.class            Attribute
+    _definition.update           2018-05-30
+    _description.text
+;
+     Data item definition that is deficient in the following ways:
+     - Contains the _dictionary.title attribute which is prohibited in the
+       Item scope.
+     - Does not contain the recommended _definition.source item.
+
+     Also, note that even though this definition contains an alias, each issues
+     should be reported only once.
+;
+    _description.common
+;
+     Data item definition that is deficient in the following ways:
+     - Contains the _dictionary.title attribute which is prohibited in the
+       Item scope.
+     - Does not contain the recommended _definition.source item.
+
+     Also, note that even though this definition contains an alias, each issues
+     should be reported only once.
+;
+    _name.category_id            looped_category_no_key_name
+    _name.object_id              aliased_item
+    _type.purpose                Key
+    _type.container              Single
+    _type.contents               Integer
 save_
 
 save_SET_CATEGORY_WITH_NO_DESCRIPTION
