@@ -8,6 +8,8 @@ scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_fake
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_fake.item: NOTE, data item '_dictionary.version' is prohibited in the 'Item' scope of the 'fake.item' frame.
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_fake.item: NOTE, data item '_name.object_id' is mandatory in the 'Item' scope of the 'fake.item' frame.
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_looped_category_no_key_id.key: NOTE, data item '_category_key.name' is prohibited in the 'Item' scope of the 'looped_category_no_key_id.key' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_looped_category_no_key_name.aliased_item: NOTE, data item '_dictionary.title' is prohibited in the 'Item' scope of the 'looped_category_no_key_name.aliased_item' frame.
+scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_looped_category_no_key_name.aliased_item: NOTE, data item '_type.source' is recommended in the 'Item' scope of the 'looped_category_no_key_name.aliased_item' frame.
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC save_looped_category_no_key_name.key: NOTE, data item '_category_key.name' is prohibited in the 'Item' scope of the 'looped_category_no_key_name.key' frame.
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC: NOTE, data item '_definition.id' is prohibited in the 'Dictionary' scope of the 'FAKE_DIC' frame.
 scripts/ddlm_validate: tests/cases/ddlm_validate_084.inp data_FAKE_DIC: NOTE, data item '_description.text' is recommended in the 'Dictionary' scope of the 'FAKE_DIC' frame.
