@@ -65,6 +65,8 @@ cod-tools (unreleased)
     - COD::CIF::DDL::DDLm::Validate:
         - a typo in a validation message reporting 'datetime' content type
           violations.
+        - updated the validate_application_scope() subroutine to no longer
+          generate duplicate messages relating to the application scope.
     - scripts/cif_cod_deposit:
         - corrected the configuration variable name 'bypass_check_password'.
     - cif_filter:
